@@ -9,7 +9,7 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
        BUILD_API=2
         WEB_SITE=http://www.kde.org
          ENTERED=20020912
-         UPDATED=20050422
+         UPDATED=20050521
       LICENSE[0]=GPL
            SHORT="Base applications that form the core of KDE."
 cat << EOF
