@@ -1,3 +1,3 @@
 default_pre_build &&
 cd ${SOURCE_DIRECTORY}/kimgio &&
-patch -p0 < ${SCRIPT_DIRECTORY}/post-3.4.0-kdelibs-kimgio.diff
+patch -p0 < ${SCRIPT_DIRECTORY}/post-3.4.0-kdelibs-kimgio-fixed.diff
