@@ -1,3 +1,3 @@
 default_pre_build &&
 cd ${SOURCE_DIRECTORY} &&
-patch -p0 < ${SCRIPT_DIRECTORY}/post-3.4.0-kdewebdev-kommander.diff
+patch -p0 < ${SCRIPT_DIRECTORY}/post-3.4.0-kdewebdev-kommander-fixed.diff
