@@ -34,7 +34,7 @@ diff -u -3 -d -p -r1.49 -r1.49.2.3
 +  
 +  bool inTemp = false;
 +  for (QStringList::ConstIterator I = tmpDirs.begin(); I != tmpDirs.end(); ++I)
-+  if (m_uiFileName.directory().startsWith(*I))
++  if (m_uiFileName.directory(false).startsWith(*I))
 +      inTemp = true;
 +        
 +  if (inTemp)
